--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,14 +6,15 @@ on:
 name: Publish
 jobs:
   publish:
+    runs-on: ubuntu-latest
     steps:
       - name: Publish to RubyGems
-      run: |
-          mkdir -p $HOME/.gem
-          touch $HOME/.gem/credentials
-          chmod 0600 $HOME/.gem/credentials
-          printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          gem build *.gemspec
-          gem push *.gem
-      env:
-          GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_AUTH_TOKEN}}
+        run: |
+            mkdir -p $HOME/.gem
+            touch $HOME/.gem/credentials
+            chmod 0600 $HOME/.gem/credentials
+            printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+            gem build *.gemspec
+            gem push *.gem
+        env:
+            GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_AUTH_TOKEN}}
