--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -11,7 +11,7 @@ jobs:
           ruby-version: 2.6
       - run: bundle install
       # convert
-      - run: bundle exec review-retrovert convert testdata/mybook/config.yml tmp"
+      - run: bundle exec review-retrovert convert testdata/mybook/config.yml tmp
       # build
       - uses: docker://srzzumix/review-retrovert
         with:
