--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -10,6 +10,9 @@ jobs:
         with:
           ruby-version: 2.6
       - run: bundle install
+      # spec
+      - name: spec
+        run: bundle exec rake spec
       # convert
       - name: convert
         run: bundle exec review-retrovert convert testdata/mybook/config.yml tmp
