--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -27,4 +27,9 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: mybook
-          path: mybook.pdf
+          path: tmp/mybook.pdf
+      - name: artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: mybook
+          path: tmp/mybook.epub
