--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -18,7 +18,7 @@ jobs:
           ruby-version: 2.6
       - run: |
           cp Gemfile Gemfile-${{ matrix.review-version }}
-          echo 'gem "rake", "${{ matrix.review-version }}"' >> Gemfile-${{ matrix.review-version }}
+          echo 'gem "review", "${{ matrix.review-version }}"' >> Gemfile-${{ matrix.review-version }}
           cat Gemfile-${{ matrix.review-version }}
       - run: bundle install --gemfile=Gemfile-${{ matrix.review-version }}
       # spec
