--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -31,7 +31,7 @@ jobs:
         run: bundle exec review-retrovert convert testdata/mybook/config.yml tmp -f
       # build
       - name: review build
-        uses: "docker://vvakame/review:${{ matrix.review-version }}"
+        uses: docker://vvakame/review:${{ matrix.review-version }}
         with:
           entrypoint: bash
           args: -c "cd tmp; rake preproc all"
