--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -11,6 +11,7 @@ jobs:
     strategy:
       matrix:
         review-version: [ "3.2", "4.2", "5.0" ]
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
