--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        review-version: [ "3.2", "4.2", "5.0" ]
+        review-version: [ "3.2", "4.2", "5.0", "5.2" ]
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
