--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -10,7 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        review-version: [ "3.2", "4.2", "5.0", "5.2" ]
+        review-version:
+          - "3.0"
+          - "3.1"
+          - "3.2"
+          - "4.0"
+          - "4.1"
+          - "4.2"
+          - "5.0"
+          - "5.1"
+          - "5.2"
+          - "latest"
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
