--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -33,8 +33,11 @@ jobs:
           echo 'gem "review", "${{ matrix.review-version }}"' >> Gemfile-${{ matrix.review-version }}
           cat Gemfile-${{ matrix.review-version }}
           echo "BUNDLE_GEMFILE=Gemfile-${{ matrix.review-version }}" >> $GITHUB_ENV
-        if: ${{ matrix.review-version != 'latest' }} 
+        if: ${{ matrix.review-version != 'latest' }}
       - run: bundle install --gemfile=Gemfile-${{ matrix.review-version }}
+        if: ${{ matrix.review-version != 'latest' }}
+      - run: bundle install
+        if: ${{ matrix.review-version == 'latest' }}
       # spec
       - name: spec
         run: bundle exec rake spec
