--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -11,16 +11,16 @@ jobs:
     strategy:
       matrix:
         review-version:
-          - "3.0"
-          - "3.1"
+          # - "3.0"
+          # - "3.1"
           - "3.2"
           - "4.0"
           - "4.1"
           - "4.2"
           - "5.0"
-          - "5.1"
-          - "5.2"
-          - "latest"
+          # - "5.1"
+          # - "5.2"
+          # - "latest"
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
