--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -42,9 +42,7 @@ jobs:
       - uses: actions/checkout@v6
         with:
           persist-credentials: false
-      - uses: ruby/setup-ruby@v1
-        with:
-          bundler-cache: true
+      - uses: ruby/setup-ruby@4c24fa5ec04b2e79eb40571b1cee2a0d2b705771 # v1.278.0
       - run: |
           rm -f Gemfile.lock
           cp Gemfile Gemfile-${{ matrix.review-version }}
@@ -70,7 +68,7 @@ jobs:
       #     args: -c "cd tmp; rake preproc all"
       # docker login
       - name: Login to DockerHub
-        uses: docker/login-action@v3
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
