--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -9,7 +9,9 @@ jobs:
   review-starter:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
+        with:
+          persist-credentials: false
       - name: build pdf
         run: |
           docker run --rm -v "$(pwd)/testdata/mybook":/work -w /work kauplan/review2.5 rake preproc pdf
@@ -36,6 +38,13 @@ jobs:
           - "5.1"
           - "5.2"
           - "5.3"
+          - "5.4"
+          - "5.5"
+          - "5.6"
+          - "5.7"
+          - "5.8"
+          - "5.9"
+          - "5.10"
           - "latest"
       fail-fast: false
     steps:
