--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,28 +1,63 @@
 name: Docker Build
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      publish:
+        description: 'Push images to Docker Hub'
+        required: true
+        type: boolean
+        default: false
+  release:
+    types: [published]
 
 jobs:
-  push_to_registries:
+  get-versions:
     runs-on: ubuntu-latest
+    outputs:
+      versions: ${{ steps.get-versions.outputs.versions }}
+    steps:
+      - name: Get review versions from docker-review repo
+        id: get-versions
+        run: |
+          # Get directory list from vvakame/docker-review repository
+          VERSIONS=$(curl -s https://api.github.com/repos/vvakame/docker-review/contents | \
+            jq -r '["latest"] + [.[] | select(.type == "dir" and (.name | test("^review-[0-9]+\\.[0-9]+$"))) | .name | ltrimstr("review-")] | sort_by(if . == "latest" then [999,999] else split(".") | map(tonumber) end) | reverse')
+          echo "versions=${VERSIONS}" >> $GITHUB_OUTPUT
+          echo "Found versions: ${VERSIONS}"
+
+  push_to_registries:
+    needs: get-versions
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        version: ${{ fromJson(needs.get-versions.outputs.versions) }}
     steps:
       - name: Check out the repo
         uses: actions/checkout@v6
         with:
           persist-credentials: false
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
       - name: Log in to Docker Hub
+        if: github.event_name == 'release' || inputs.publish
         uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Push to Docker Hub
+      - name: Build and Push to Docker Hub
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
-          push: true
-          tags: srzzumix/review-retrovert:latest
-      - name: Push to version tag
+          push: ${{ (github.event_name == 'release' || inputs.publish) && matrix.version == 'latest' }}
+          load: true
+          build-args: |
+            REVIEW_VERSION=${{ matrix.version }}
+          tags: srzzumix/review-retrovert:${{ matrix.version }}
+      - name: Push review-retrovert version tag
+        if: github.event_name == 'release' || inputs.publish
         env:
-          DOCKER_TAG: latest
-          IMAGE_NAME: srzzumix/review-retrovert:latest
+          DOCKER_TAG: ${{ matrix.version }}
+          IMAGE_NAME: srzzumix/review-retrovert:${{ matrix.version }}
           DOCKER_REPO: srzzumix/review-retrovert
         run: |
           ./hooks/post_push
