--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,8 +24,8 @@ jobs:
           # Get directory list from vvakame/docker-review repository
           REVIEW_VERSIONS=$(curl -s https://api.github.com/repos/vvakame/docker-review/contents | \
             jq -r '[.[] | select(.type == "dir" and (.name | test("^review-[0-9]+\\.[0-9]+$"))) | .name | ltrimstr("review-")] | sort_by(split(".") | map(tonumber)) | reverse')
-          # Add "latest" to the beginning
-          VERSIONS=$(echo "${REVIEW_VERSIONS}" | jq '. = ["latest"] + .')
+          # Add "latest" to the beginning and output as compact JSON
+          VERSIONS=$(echo "${REVIEW_VERSIONS}" | jq -c '. = ["latest"] + .')
           echo "versions=${VERSIONS}" >> $GITHUB_OUTPUT
           echo "Found versions: ${VERSIONS}"
 
