--- a/.github/workflows/retrovert.yml
+++ b/.github/workflows/retrovert.yml
@@ -4,10 +4,14 @@ on:
     branches:
       - master
 
+permissions: {}
+
 name: Retrovert
 jobs:
   review-starter:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - uses: actions/checkout@v6
         with:
@@ -25,6 +29,8 @@ jobs:
 
   review:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     strategy:
       matrix:
         review-version:
